--- a/project1/contact form/form2.html
+++ b/project1/contact form/form2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
-    <link rel="stylesheet" href="forms.css">
+    <link rel="stylesheet" href="form2.css">
 </head>
 <body>
     <div class="form-container">
